log
Fri Apr  8 15:33:20 UTC 2022: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
9b9ca7b
Fri Apr  8 15:39:23 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:26: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
         if(is_equal(map->bucket[i],key) == 1)
                          ^~~~~~
                          buckets
hashmap.c:74:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return key;
                  ^~~
cc1: all warnings being treated as errors
Compilation failed
9ebf888
Fri Apr  8 15:39:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:26: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
         if(is_equal(map->bucket[i],key) == 1)
                          ^~~~~~
                          buckets
hashmap.c:74:33: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return map->buckets[i]->key;
                  ~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
260d624
Fri Apr  8 15:40:00 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:33: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return map->buckets[i]->key;
                  ~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
6fd3c6c
Fri Apr  8 15:40:22 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return key;
                  ^~~
cc1: all warnings being treated as errors
Compilation failed
0bb44b3
Fri Apr  8 15:40:55 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:33: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return map->buckets[i]->key;
                  ~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
5c7c552
Fri Apr  8 15:41:20 UTC 2022: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
6526820
Fri Apr  8 15:45:32 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f755b2e
Fri Apr  8 15:59:07 UTC 2022: 
 hashmap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
38f9512
Fri Apr  8 15:59:27 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
2e78e81
Fri Apr  8 16:02:20 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
d1c1abd
Fri Apr  8 16:02:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
0c52683
Fri Apr  8 16:05:17 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:85:38: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return map -> buckets[i] -> key;
                    ~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
88ecfbb
Fri Apr  8 16:06:09 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:27: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return aux[i] -> key;
                    ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ea9f0fa
Fri Apr  8 16:10:47 UTC 2022: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:28: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
       return aux[posicion] -> key;
              ~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
653450e
Fri Apr  8 16:14:36 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:28: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
       return aux[posicion] -> key;
              ~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ed88cd
Fri Apr  8 16:14:47 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0b04865
Fri Apr  8 16:15:39 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
18b0f5d
